@@ -68,4 +68,7 @@ void KPrPgNumVariable::recalc()
         m_varValue = QVariant( (int)(m_doc->getPageNums()+m_varColl->variableSetting()->startingPage()-1));
         resize();
     }
+    // But we don't want to keep a width of -1 ...
+    if ( width == -1 )
+        width = 0;
 }
