@@ -1,7 +1,11 @@
 Changes after KOffice-1.3-beta3
 ===============================
+KOfficeCore:
+- Fixed saving of the window size when closing
+KoText:
 - Fixed painting of non-breakable-spaces (could show up as a visible square)
 - Implemented painting of non-breakable-spaces when "draw formatting characters" is on
+- Fixed crash (e.g. happening with 'section title' variable, #61735)
 
 Changes after KOffice-1.3-beta2
 ===============================
